--- a/Diplom_project_v_3.ipynb
+++ b/Diplom_project_v_3.ipynb
@@ -13,8 +13,7 @@
     "from datetime import timedelta\n",
     "import time\n",
     "import re\n",
-    "from bs4 import BeautifulSoup\n",
-    "from datetime import datetime\n"
+    "from bs4 import BeautifulSoup\n"
    ]
   },
   {
